--- a/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
+++ b/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="State && !State.Loading">
-  <mat-toolbar>
+<ng-container *ngIf="State">
+  <mat-toolbar *ngIf="ShowContainer">
     <button mat-icon-button (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
@@ -8,23 +8,23 @@
 
     <span class="filler"></span>
 
-    <a mat-icon-button>
+    <!-- <a mat-icon-button (click)="Settings.emit()">
       <mat-icon>settings</mat-icon>
-    </a>
+    </a> -->
   </mat-toolbar>
 
   <mat-drawer-container class="state-drawer">
-    <mat-drawer mode="side" #drawer opened>
-      <mat-nav-list>
-        <mat-list-item *ngFor="let state of State.States">
-          <a matLine>{{ state }}</a>
+    <mat-drawer mode="side" #drawer closed>
+      <mat-nav-list *ngIf="!State.Loading">
+        <mat-list-item [class.active]="state == State.ActiveState?.Lookup" *ngFor="let state of State.States">
+          <a matLine (click)="SelectState(state)">{{ state }}</a>
 
-          <button mat-icon-button>
+          <button mat-icon-button (click)="SelectStateSettings(state)">
             <mat-icon>settings</mat-icon>
           </button>
         </mat-list-item>
 
-        <mat-list-item>
+        <mat-list-item (click)="ToggleSavingState()">
           <a matLine>Add New State</a>
 
           <button mat-icon-button>
@@ -36,14 +36,152 @@
 
     <mat-drawer-content>
       <div class="state-content">
-        <h2 *ngIf="!State.ActiveState">Add or Select a State to continue (select the settings cog to manage a state).</h2>
+        <ng-container *ngIf="!State.Loading">
+          <h2 *ngIf="!State.ActiveState && !SavingState">Add or Select a State to continue (select the settings cog to manage a state).</h2>
 
-        <h2 *ngIf="State.ActiveState">{{ State.ActiveState.Name }}</h2>
+          <ng-container *ngIf="State.ActiveState">
+            <ng-container *ngIf="!State.IsStateSettings">
+              <h2>Managing {{ State.ActiveState.Name }}</h2>
+            </ng-container>
+
+            <form *ngIf="State.IsStateSettings" (ngSubmit)="EmitSaveState()">
+              <h2>
+                Managing {{ State.ActiveState.Name }} <span *ngIf="State.IsStateSettings">Settings</span>
+
+                <span class="state-actions">
+                  <button type="submit" mat-raised-button color="primary">Save State</button>
+
+                  <a mat-button color="warn" (click)="SelectState(null)">Cancel</a>
+                </span>
+              </h2>
+
+              <mat-tab-group>
+                <mat-tab label="Actions">
+                  <mat-accordion>
+                    <mat-expansion-panel *ngFor="let actionName of ActiveActionNames">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          {{ actionName }}
+                        </mat-panel-title>
+
+                        <mat-panel-description>
+                          {{ actionName }}
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
+
+                      <mat-form-field class="mat-full-width">
+                        <input
+                          matInput
+                          placeholder="Action API Root"
+                          [(ngModel)]="State.ActiveState.Actions[actionName].APIRoot"
+                          [name]="'apiRoot' + actionName"
+                        />
+                      </mat-form-field>
+
+                      <mat-form-field class="mat-full-width">
+                        <input
+                          matInput
+                          placeholder="API Security"
+                          [(ngModel)]="State.ActiveState.Actions[actionName].Security"
+                          [name]="'security' + actionName"
+                        />
+                      </mat-form-field>
+
+                      <div class="state-actions">
+                        <button type="button" mat-raised-button color="warn" (click)="RemoveAction(actionName)">
+                          <mat-icon>cancel</mat-icon>
+
+                          Remove Action
+                        </button>
+                      </div>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Create New Action
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+
+                      <mat-form-field class="mat-full-width">
+                        <input matInput placeholder="Action Name" [(ngModel)]="NewActionName" name="newActionName" />
+                      </mat-form-field>
+
+                      <mat-form-field class="mat-full-width">
+                        <input matInput placeholder="Action API Root" [(ngModel)]="NewActionAPIRoot" name="newActionApiRoot" />
+                      </mat-form-field>
+
+                      <mat-form-field class="mat-full-width">
+                        <input matInput placeholder="API Security" [(ngModel)]="NewActionSecurity" name="newActionSecurity" />
+                      </mat-form-field>
+
+                      <div class="state-actions">
+                        <button type="button" mat-raised-button color="accent" (click)="AddNewAction()">Add New Action</button>
+                      </div>
+                    </mat-expansion-panel>
+                  </mat-accordion>
+                </mat-tab>
+
+                <mat-tab label="Default Value">
+                  <mat-form-field class="mat-full-width">
+                    <textarea
+                      matInput
+                      placeholder="Default Value JSON"
+                      [ngModel]="State.ActiveState.DefaultValue | json"
+                      (ngModelChange)="DefaultValueChanged($event)"
+                      name="defaultValue"
+                      cdkTextareaAutosize
+                      cdkAutosizeMinRows="5"
+                    ></textarea>
+                  </mat-form-field>
+                </mat-tab>
+
+                <mat-tab label="Details">
+                  <mat-form-field class="mat-full-width">
+                    <input matInput placeholder="State Name" [(ngModel)]="State.ActiveState.Name" name="name" />
+                  </mat-form-field>
+
+                  <mat-form-field class="mat-full-width">
+                    <input matInput placeholder="Lookup" [(ngModel)]="State.ActiveState.Lookup" name="lookup" />
+                  </mat-form-field>
+
+                  <mat-form-field class="mat-full-width">
+                    <textarea matInput placeholder="Description" [(ngModel)]="State.ActiveState.Description" name="desc"></textarea>
+                  </mat-form-field>
+                </mat-tab>
+              </mat-tab-group>
+            </form>
+          </ng-container>
+
+          <div fxFlex *ngIf="SavingState">
+            <form [formGroup]="SaveStateFormGroup" (ngSubmit)="EmitSaveState()">
+              <h2>Create new State Container</h2>
+
+              <mat-form-field class="mat-full-width">
+                <input matInput placeholder="State Name" formControlName="name" />
+              </mat-form-field>
+
+              <mat-form-field class="mat-full-width">
+                <input matInput placeholder="Lookup" formControlName="lookup" />
+              </mat-form-field>
+
+              <mat-form-field class="mat-full-width">
+                <textarea matInput placeholder="Description" formControlName="desc"></textarea>
+              </mat-form-field>
+
+              <div class="state-actions">
+                <button type="submit" mat-raised-button color="primary">Save State</button>
+
+                <a mat-button color="warn" (click)="ToggleSavingState()">Cancel</a>
+              </div>
+            </form>
+          </div>
+        </ng-container>
+
+        <ng-container *ngIf="State.Loading">
+          <mat-spinner></mat-spinner>
+        </ng-container>
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
 </ng-container>
-
-<div class="state-content" *ngIf="State.Loading">
-  <mat-spinner></mat-spinner>
-</div>
