--- a/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.scss
+++ b/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.scss
@@ -10,3 +10,9 @@
   padding: 2rem;
   text-align: right;
 }
+
+.mat-drawer,
+.mat-drawer-container,
+.mat-toolbar {
+  background-color: transparent;
+}
