--- a/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
+++ b/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="State">
+<div class="lcu-state-config-manager" *ngIf="State">
   <mat-toolbar *ngIf="ShowContainer">
     <button mat-icon-button (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
@@ -184,4 +184,4 @@
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
-</ng-container>
+</div>
