--- a/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
+++ b/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
@@ -57,44 +57,42 @@
 
               <mat-tab-group>
                 <mat-tab label="Actions">
+                  <mat-form-field class="mat-full-width spread">
+                    <mat-select placeholder="Active Environment" [(ngModel)]="State.ActiveState.ActiveEnvironment" name="actEnv">
+                      <mat-option [value]="envName" *ngFor="let envName of EnvironmentNames">{{ envName }}</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+
                   <mat-accordion>
-                    <mat-expansion-panel *ngFor="let actionName of ActiveActionNames">
-                      <mat-expansion-panel-header>
-                        <mat-panel-title>
-                          {{ actionName }}
-                        </mat-panel-title>
+                    <ng-container *ngFor="let actionName of ActiveActionNames">
+                      <mat-expansion-panel *ngIf="State.ActiveState.Actions[actionName]; let action">
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            {{ actionName }}
+                          </mat-panel-title>
 
-                        <mat-panel-description>
-                          {{ actionName }}
-                        </mat-panel-description>
-                      </mat-expansion-panel-header>
+                          <mat-panel-description>
+                            {{ actionName }}
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
 
-                      <mat-form-field class="mat-full-width">
-                        <input
-                          matInput
-                          placeholder="Action API Root"
-                          [(ngModel)]="State.ActiveState.Actions[actionName].APIRoot"
-                          [name]="'apiRoot' + actionName"
-                        />
-                      </mat-form-field>
+                        <mat-form-field class="mat-full-width">
+                          <input matInput placeholder="Action API" [(ngModel)]="action.APIRoot" [name]="'apiRoot' + actionName" />
+                        </mat-form-field>
 
-                      <mat-form-field class="mat-full-width">
-                        <input
-                          matInput
-                          placeholder="API Security"
-                          [(ngModel)]="State.ActiveState.Actions[actionName].Security"
-                          [name]="'security' + actionName"
-                        />
-                      </mat-form-field>
+                        <mat-form-field class="mat-full-width">
+                          <input matInput placeholder="API Security" [(ngModel)]="action.Security" [name]="'security' + actionName" />
+                        </mat-form-field>
 
-                      <div class="state-actions">
-                        <button type="button" mat-raised-button color="warn" (click)="RemoveAction(actionName)">
-                          <mat-icon>cancel</mat-icon>
+                        <div class="state-actions">
+                          <button type="button" mat-raised-button color="warn" (click)="RemoveAction(actionName)">
+                            <mat-icon>cancel</mat-icon>
 
-                          Remove Action
-                        </button>
-                      </div>
-                    </mat-expansion-panel>
+                            Remove Action
+                          </button>
+                        </div>
+                      </mat-expansion-panel>
+                    </ng-container>
 
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -108,7 +106,7 @@
                       </mat-form-field>
 
                       <mat-form-field class="mat-full-width">
-                        <input matInput placeholder="Action API Root" [(ngModel)]="NewActionAPIRoot" name="newActionApiRoot" />
+                        <input matInput placeholder="Action API" [(ngModel)]="NewActionAPIRoot" name="newActionApiRoot" />
                       </mat-form-field>
 
                       <mat-form-field class="mat-full-width">
@@ -117,6 +115,56 @@
 
                       <div class="state-actions">
                         <button type="button" mat-raised-button color="accent" (click)="AddNewAction()">Add New Action</button>
+                      </div>
+                    </mat-expansion-panel>
+                  </mat-accordion>
+                </mat-tab>
+
+                <mat-tab label="Environments">
+                  <mat-accordion>
+                    <ng-container *ngFor="let envName of EnvironmentNames">
+                      <mat-expansion-panel *ngIf="State.ActiveState.Environments[envName]; let env">
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            {{ envName }}
+                          </mat-panel-title>
+
+                          <mat-panel-description>
+                            {{ envName }}
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+
+                        <mat-form-field class="mat-full-width">
+                          <input matInput placeholder="Server API Root" [(ngModel)]="env.ServerAPIRoot" [name]="'root' + envName" />
+                        </mat-form-field>
+
+                        <mat-form-field class="mat-full-width">
+                          <input matInput placeholder="Server API Security" [(ngModel)]="env.Security" [name]="'srvSec' + envName" />
+                        </mat-form-field>
+
+                        <div class="state-actions">
+                          <button type="button" mat-raised-button color="warn" (click)="RemoveEnv(envName)">
+                            <mat-icon>cancel</mat-icon>
+
+                            Remove Environment
+                          </button>
+                        </div>
+                      </mat-expansion-panel>
+                    </ng-container>
+
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Create New Environment
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+
+                      <mat-form-field class="mat-full-width">
+                        <input matInput placeholder="Environment Name" [(ngModel)]="NewEnvName" name="newEnvName" />
+                      </mat-form-field>
+
+                      <div class="state-actions">
+                        <button type="button" mat-raised-button color="accent" (click)="AddNewEnv()">Add New Environment</button>
                       </div>
                     </mat-expansion-panel>
                   </mat-accordion>
@@ -148,6 +196,10 @@
                   <mat-form-field class="mat-full-width">
                     <textarea matInput placeholder="Description" [(ngModel)]="State.ActiveState.Description" name="desc"></textarea>
                   </mat-form-field>
+
+                  <mat-slide-toggle [(ngModel)]="State.ActiveState.UseUsername" name="useUsername"
+                    >Use Username state containers?</mat-slide-toggle
+                  >
                 </mat-tab>
               </mat-tab-group>
             </form>
