--- a/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
+++ b/projects/common/src/lib/controls/state-config-manager/state-config-manager.component.html
@@ -197,9 +197,9 @@
                     <textarea matInput placeholder="Description" [(ngModel)]="State.ActiveState.Description" name="desc"></textarea>
                   </mat-form-field>
 
-                  <mat-slide-toggle [(ngModel)]="State.ActiveState.UseUsername" name="useUsername"
-                    >Use Username state containers?</mat-slide-toggle
-                  >
+                  <mat-slide-toggle [(ngModel)]="State.ActiveState.UseUsername" name="useUsername">
+                    Use Username state containers?
+                  </mat-slide-toggle>
                 </mat-tab>
               </mat-tab-group>
             </form>
