--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,3 +1,7 @@
+<lcu-state-infrastructure-manager-element>
+
+</lcu-state-infrastructure-manager-element>
+<!--
 <lcu-state-config-manager-element>
 
-</lcu-state-config-manager-element>
+</lcu-state-config-manager-element> -->
