--- a/projects/common/src/lib/elements/infrastructure-manager/infrastructure-manager.component.html
+++ b/projects/common/src/lib/elements/infrastructure-manager/infrastructure-manager.component.html
@@ -47,7 +47,9 @@
           locations for your State APIs, their settings, and deployment.
         </p>
 
-
+        <div>
+          <p>Choice of Always On VS Consumption:  Is this a test vs prod question?  What is azure stance on this for azure functions?</p>
+        </div>
       </div>
     </mat-tab>
   </mat-tab-group>
